--- a/index.html
+++ b/index.html
@@ -222,3 +222,11 @@
 </body>
 
 </html>
+
+
+
+
+<div class="flex items-center justify-center"><p class='mb-1'> <img src="images/Frame (1).png"> Breed:${petData.breed}</p></div>
+<div class="flex items-center justify-center"><p><img src="images/gender.png"> Gender:${petData.gender}</p></div>
+<div class="flex items-center justify-center"><p><img src="images/birth.png"> Birth:${petData.date_of_birth}</p></div>
+<div class="flex items-center justify-center"><p><img src="images/price.png"> Price: ${petData.price}</p></div>
