--- a/index.html
+++ b/index.html
@@ -109,13 +109,15 @@
                     by Price</button>
             </div>
         </div>
-        <div id="categories" class=" flex justify-between mx-auto by">
+        <div id="categories" class=" md:flex md:justify-between mx-auto items-center bf">
         </div>
 
-        <div class="flex gap-5 ">
-            <div id="All-Pets" class="grid grid-cols-3 gap-5 bd"> </div>
-            <div class="w-[600px] categories-button rounded-md p-4">
-                <div id="like-pets" class="grid grid-cols-2 gap-4"></div>
+        <div class="md:flex gap-5 ">
+            <div>
+                <div id="All-Pets" class="md:grid md:grid-cols-3 gap-5"> </div>
+            </div>
+            <div class="max-w-[300px] w-full  categories-button rounded-md p-4 bf">
+                <div id="like-pets" class="md:grid md:grid-cols-2 gap-4"></div>
             </div>
         </div>
     </main>
@@ -151,7 +153,7 @@
         </div>
     </dialog>
 
-    <footer class="bg-[#131313] pt-8 pb-10">
+    <footer class="bg-[#131313] pt-8 pb-10 mt-24">
 
         <section class="container  bd mx-auto">
             <div class="w-11/12 mx-auto bd md:grid md:grid-cols-3">
