--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
 </head>
 
 <body class="lato-fronts">
-    <header class="br sticky top-0 bg-white z-[100]">               <!--  class="br bf sticky top-2 bg-white z-[100]" -->
-        <!------------------------------------------------------ Nav Section Start  -->
-        <!--  mt-8 mb-8  top-8-->
+    <header class="br sticky top-0 bg-white z-[100]">           
         <section class="container mx-auto w-11/12 pt-2 pb-2">
             <nav class="flex mx-auto items-center justify-between">
                 <div class="flex items-center">
@@ -70,7 +68,7 @@
         </section>
     </header>
 
-    <header class="container mx-auto bd ">
+    <header class="container mx-auto">
         <div class=" mx-auto w-11/12 mt-24 br">
             <div class="max-w-[752px]  mx-auto">
                 <h2 class="text-center md:text-2xl font-bold text-[#13131399]">Bringing Families Together</h2>
@@ -101,27 +99,29 @@
                 its layout. The point of using Lorem Ipsum is that it has a.</p>
         </div>
 
-        <div class="md:flex md:justify-between mt-9 bd">
-            <h2 class="text-small_text_color text-2xl font-black mb-10 md:mb-24 md:pl-14">Best Deal For you</h2>
-            <div>
+        <div class="md:flex md:justify-between mt-9 bd justify-center">
+           <div class="flex justify-center items-center"> <h2 class="text-small_text_color text-2xl font-black mb-5 md:mb-24 md:pl-14">Best Deal For you</h2></div>
+            <div class="flex justify-center items-center mb-8">
                 <button onclick="loadAllPetsData()"
                     class="bg-btn_bg_color text-white px-8 py-3 rounded-md mr-2 text-center items-center text-lg font-bold flex justify-center">Sort
                     by Price</button>
             </div>
         </div>
-        <div id="categories" class=" md:flex md:justify-between mx-auto items-center bf">
+
+        
+        <div id="categories" class=" md:flex md:justify-between mx-auto items-center">
         </div>
 
         <div class="md:flex gap-5 ">
             <div>
                 <div id="All-Pets" class="md:grid md:grid-cols-3 gap-5"> </div>
             </div>
-            <div class="max-w-[300px] w-full  categories-button rounded-md p-4 bf">
+            <div class="max-w-[300px] w-full  categories-button rounded-md p-4 hidden md:block">
                 <div id="like-pets" class="md:grid md:grid-cols-2 gap-4"></div>
             </div>
         </div>
     </main>
-
+    
     <!-- Open the modal using ID.showModal() method -->
     <button class="btn hidden" onclick="loadDetails(5)">open modal</button>
     <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
@@ -192,13 +192,16 @@
                         <input type="email" class="grow" placeholder="Enter your email" />
                     </label>
                     <div>
-                        <button class="bg-[rgb(14,122,129)] px-20 py-2 rounded-lg text-white ">Subscribe</button>
+                        <button class="bg-[rgb(14,122,129)] md:px-20 px-14 py-2 rounded-lg text-white ">Subscribe</button>
                     </div>
                 </div>
             </div>
 
         </section>
     </footer>
+
+    <div id="spinner" style="display: none;" class="spinner"></div>
+
     <script src="./Script/index.js"></script>
 </body>
 
