--- a/index.html
+++ b/index.html
@@ -74,10 +74,7 @@
                 <h2 class="text-center md:text-2xl font-bold text-[#13131399]">Bringing Families Together</h2>
                 <h1 class="text-5xl md:text-6xl font-bold text-center text-text-small_text_color mt-5">Your Path to Adoption Starts
                     Here</h1>
-                <p class="text-base font-normal font-color text-center mt-6 mb-8">It is a long established fact that a
-                    reader will
-                    be distracted by the readable content of a page when looking at its layout. The point of using Lorem
-                    Ipsum is that it has a.</p>
+                <p class="text-base font-normal font-color text-center mt-6 mb-8">Share heartwarming tales of pets who found their forever homes. Highlight the journey of both the pets and their new families to inspire others to adopt.</p>
                 <div class="flex justify-center mb-12">
                     <button class="bg-[rgb(14,122,129)] px-12 py-3 rounded-lg text-white ">View More</button>
                     <!-- <button class="bg-btn_bg_color text-white px-8 py-4 rounded-md mr-2 text-center items-center text-xl font-bold">View More</button> -->
@@ -94,9 +91,7 @@
     <main class="container bd mx-auto w-11/12 mt-24 ">
         <div class="text-center flex flex-col  items-center justify-center">
             <h2 class="text-4xl text-small_text_color font-black ">Adopt Your Best Friend</h2>
-            <p class="text-base text-small_text_color font-normal font-color text-center mt-6 mb-8 md:w-[636px] bd">It is a
-                long established fact that a reader will be distracted by the readable content of a page when looking at
-                its layout. The point of using Lorem Ipsum is that it has a.</p>
+            <p class="text-base text-small_text_color font-normal font-color text-center mt-6 mb-8 md:w-[636px] bd">Are you ready to find a lifelong companion? Adopting a pet means welcoming a new best friend into your life. Here’s why you should consider bringing home a furry (or feathered) friend.</p>
         </div>
 
         <div class="md:flex md:justify-between mt-9 bd justify-center">
