--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <header class="br sticky top-0 bg-white z-[100]">           
         <section class="container mx-auto w-11/12 pt-2 pb-2">
             <nav class="flex mx-auto items-center justify-between">
+                <div class="md:hidden text-lg pl-3">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
                 <div class="flex items-center">
                     <img class="mr-2" src="images/logo.webp" alt="">
                     <h1 class="text-3xl font-black">Peddy</h1>
@@ -97,7 +100,7 @@
         <div class="md:flex md:justify-between mt-9 bd justify-center">
            <div class="flex justify-center items-center"> <h2 class="text-small_text_color text-2xl font-black mb-5 md:mb-24 md:pl-14">Best Deal For you</h2></div>
             <div class="flex justify-center items-center mb-8">
-                <button onclick="loadAllPetsData()"
+                <button onclick="sortPetsByPrice()"
                     class="bg-btn_bg_color text-white px-8 py-3 rounded-md mr-2 text-center items-center text-lg font-bold flex justify-center">Sort
                     by Price</button>
             </div>
@@ -111,7 +114,7 @@
             <div>
                 <div id="All-Pets" class="md:grid md:grid-cols-3 gap-5"> </div>
             </div>
-            <div class="max-w-[300px] w-full  categories-button rounded-md p-4 hidden md:block">
+            <div class="max-w-[300px] w-full  categories-button rounded-md p-4 mt-5 md:mt-0 mx-auto">
                 <div id="like-pets" class="md:grid md:grid-cols-2 gap-4"></div>
             </div>
         </div>
