--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <div class="md:flex gap-5 ">
             <div>
-                <div id="All-Pets" class="md:grid md:grid-cols-3 gap-5"> </div>
+                <div id="All-Pets" class="md:grid sm:grid-cols-1 md:grid-cols-3 gap-5"> </div>
             </div>
             <div class="max-w-[300px] w-full  categories-button rounded-md p-4 mt-5 md:mt-0 mx-auto">
                 <div id="like-pets" class="md:grid md:grid-cols-2 gap-4"></div>
