--- a/index.html
+++ b/index.html
@@ -50,7 +50,29 @@
         <section class="container mx-auto w-11/12 pt-2 pb-2">
             <nav class="flex mx-auto items-center justify-between">
                 <div class="md:hidden text-lg pl-3">
-                    <i class="fa-solid fa-bars"></i>
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            class="h-5 w-5"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              stroke-width="2"
+                              d="M4 6h16M4 12h16M4 18h7" />
+                          </svg>
+                        </div>
+                        <ul
+                          tabindex="0"
+                          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                          <li><a>Home</a></li>
+                          <li><a>Shop</a></li>
+                          <li><a>Contact</a></li>
+                        </ul>
+                      </div>
                 </div>
                 <div class="flex items-center">
                     <img class="mr-2" src="images/logo.webp" alt="">
@@ -79,7 +101,7 @@
                     Here</h1>
                 <p class="text-base font-normal font-color text-center mt-6 mb-8">Share heartwarming tales of pets who found their forever homes. Highlight the journey of both the pets and their new families to inspire others to adopt.</p>
                 <div class="flex justify-center mb-12">
-                    <button class="bg-[rgb(14,122,129)] px-12 py-3 rounded-lg text-white ">View More</button>
+                    <button class="bg-[rgb(14,122,129)] px-12 py-3 rounded-lg text-white "><a href="#adopt-firends">View More</a></button>
                     <!-- <button class="bg-btn_bg_color text-white px-8 py-4 rounded-md mr-2 text-center items-center text-xl font-bold">View More</button> -->
                 </div>
 
@@ -93,7 +115,7 @@
 
     <main class="container bd mx-auto w-11/12 mt-24 ">
         <div class="text-center flex flex-col  items-center justify-center">
-            <h2 class="text-4xl text-small_text_color font-black ">Adopt Your Best Friend</h2>
+            <h2 id="adopt-firends" class="text-4xl text-small_text_color font-black ">Adopt Your Best Friend</h2>
             <p class="text-base text-small_text_color font-normal font-color text-center mt-6 mb-8 md:w-[636px] bd">Are you ready to find a lifelong companion? Adopting a pet means welcoming a new best friend into your life. Here’s why you should consider bringing home a furry (or feathered) friend.</p>
         </div>
 
@@ -112,9 +134,9 @@
 
         <div class="md:flex gap-5 ">
             <div>
-                <div id="All-Pets" class="md:grid sm:grid-cols-1 md:grid-cols-3 gap-5"> </div>
+                <div id="All-Pets" class="md:grid md:grid-cols-3 lg:grid-cols-3 gap-5"> </div>
             </div>
-            <div class="max-w-[300px] w-full  categories-button rounded-md p-4 mt-5 md:mt-0 mx-auto">
+            <div class="max-w-[300px] w-full  categories-button rounded-md p-4 mt-5 md:mt-0 mx-auto hidden md:block">
                 <div id="like-pets" class="md:grid md:grid-cols-2 gap-4"></div>
             </div>
         </div>
