--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <div class="md:flex gap-5 ">
             <div>
-                <div id="All-Pets" class="md:grid md:grid-cols-3 lg:grid-cols-3 gap-5"> </div>
+                <div id="All-Pets" class="md:grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"> </div>
             </div>
             <div class="max-w-[300px] w-full  categories-button rounded-md p-4 mt-5 md:mt-0 mx-auto hidden md:block">
                 <div id="like-pets" class="md:grid md:grid-cols-2 gap-4"></div>
@@ -148,8 +148,8 @@
         <div class="modal-box">
             <div id="modal-content"></div>
             <div class="modal-action">
-                <form method="dialog">
-                    <button class="btn">Close</button>
+                <form method="dialog" class="w-full">
+                    <button class="w-full bg-btn_bg_color py-2 text-white rounded-lg">Close</button>
                 </form>
             </div>
         </div>
@@ -166,9 +166,7 @@
 
             </p>
             <div class="modal-action">
-                <form method="dialog">
-                    <button class="btn">Close</button>
-                </form>
+              
             </div>
         </div>
     </dialog>
