--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div>
                 <div id="All-Pets" class="md:grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"> </div>
             </div>
-            <div class="max-w-[300px] w-full  categories-button rounded-md p-4 mt-5 md:mt-0 mx-auto hidden md:block">
+            <div class="max-w-[300px] w-full  categories-button rounded-md p-4 mt-5 md:mt-0 mx-auto">
                 <div id="like-pets" class="md:grid md:grid-cols-2 gap-4"></div>
             </div>
         </div>
